<resources>
    <string name="app_name">E1-AlanMartinez</string>
    <!-- Login -->
    <string name="email">Correo electrónico</string>
    <string name="contrasenia">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="salir">Salir</string>
    <!-- Menu -->
    <string name="menu">Menú</string>
    <string name="calculadora">Calculadora</string>
    <string name="imagenes">Imágenes</string>
    <string name="web">WEB</string>
    <string name="video">Video</string>
    <string name="gbs">GPS</string>
    <string name="mas">Más</string>
    <string name="acercaDe">Acerca de</string>
    <string name="textview">TextView</string>
    <!-- Calculadora -->
    <!-- Web -->
    <string name="url">URL</string>
    <string name="ir">Ir</string>
    <!-- Más -->
    <string name="ocultarMostrarImagen">Ocultar/Mostrar imagen</string>
    <string name="title_activity_mapa">Map</string>
</resources>